--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "express": "^4.19.2",
     "html-to-text": "^9.0.5",
     "leetcode-query": "^1.2.3",
+    "mongoose": "^8.6.2",
     "puppeteer": "^22.9.0"
   }
 }
